# cloudgripper-api

./: .gitignore  README.md  collect_images_no_interaction.py  compute_curve.py  dataset_splits.pkl  directional_caging.py  example.py  grid_gen.py  organize.py  pyproject.toml  requirements.txt  training_losses.json
.devcontainer/: Dockerfile  devcontainer.json  install-tools.sh  requirements.txt
autograsper/: README.md  backgammon-config.yaml  collect_data.py  config.ini  config.yaml  coordinator.py  file_manager.py  grasper.py  keyframe_status_check.py  main.py  random_grasping_task.py  recording.py  robot_controller.py  stacking_autograsper.py  utils.py
autograsper/custom_graspers/: backgammon_grasper.py  calibrate_grasper.py  evaluation_grasper.py  example_grasper.py  manual_grasper.py  random_grasping_task.py  stacking_autograsper.py  subtask1Grasper.py
backup/: dataset_splits.pkl
client/: cloudgripper_client.py  robot_interface.py
image_collector/: collect_data.py  cv2displayer.py  grid_gen.py  manual_control.py  session_log.py
post-processing/: extract_keyframes.py  join_order_and_states.py  keyframe_status_check.py  status_check.py
stack_from_scratch/: SortingTask.py  StackingTask.py  Task.py  autograsper.py  collect_data_stacking.py  recording.py
visual_encoder/: ImageDataset.py  ImageDatasetSeg.py  MoG.py  MoG2.py  TrainEncoder.py  background_subtraction.py  encoder.py  encoder_SAM.py  mask_dataset.py  preprocess.py  pret_models.py  segmentation_pipeline  training_losses.json
